--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,59 @@
 body {
 	font-family: "EB Garamond", serif;
 }
+a {
+	color: #6b8839;
+}
 .weather-app {
 	background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/368/original/annie-spratt-GJJo0gb7bfY-unsplash.jpg?1705760191);
 	background-repeat: no-repeat;
 	background-size: cover;
 	box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
 	border-radius: 15px;
-	margin: 30px auto;
-	padding: 30px;
+	margin: 45px auto;
+	padding: 30px 30px 10px 30px;
 	max-width: 400px;
 	max-height: 1000px;
+}
+.search-form {
+	display: flex;
+	justify-content: center;
+}
+.search-input {
+	background-color: #d7e0d2;
+	border: none;
+	border-radius: 5px;
+	width: 75%;
+	padding: 15px;
+	font-size: 16px;
+	margin-right: 5px;
+}
+.search-button {
+	background-color: #6b8839;
+	border: none;
+	border-radius: 5px;
+	padding: 15px;
+	width: 20%;
+	font-size: 16px;
+}
+h1 {
+	text-align: center;
+	margin-top: 50px;
+	font-size: 60px;
+	margin-bottom: 20px;
+}
+
+.weather-app-current {
+	text-align: center;
+	margin-top: -20px;
+	font-size: 30px;
+	font-family: "Handlee", cursive;
+	font-weight: 500;
+}
+footer {
+	border-top: 1px solid #f9f7fe;
+	padding: 5px 0 0 0;
+	text-align: center;
+	font-size: 14px;
+	color: rgba(0, 0, 0, 0.6);
 }
