--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,36 @@ h1 {
 	font-family: "Handlee", cursive;
 	font-weight: 500;
 }
+.weather-app-data {
+	display: flex;
+	justify-content: space-between;
+	margin-top: 30px;
+}
+.weather-app-temperature-container {
+	display: flex;
+	margin-left: 10px;
+	justify-content: left;
+}
+.weather-app-icon {
+	width: 100px;
+	height: 100px;
+}
+.today-temperature {
+	font-size: 80px;
+	font-weight: 500;
+	margin-left: -10px;
+}
+.weather-app-unit {
+	font-size: 20px;
+	margin-top: 20px;
+	font-weight: bold;
+}
+.weather-app-details {
+	margin-right: 10px;
+	font-family: "PT Sans Narrow", san s-serif;
+	font-size: 18px;
+}
+
 footer {
 	border-top: 1px solid #f9f7fe;
 	padding: 5px 0 0 0;
