--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,12 @@
 body {
-	font-family: "EB Garamond", serif;
+	font-family: "Lemon", serif;
+	font-family: "Work Sans", sans-serif;
 }
 a {
-	color: #6b8839;
+	color: white;
 }
 .weather-app {
-	background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/368/original/annie-spratt-GJJo0gb7bfY-unsplash.jpg?1705760191);
+	background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/694/original/IMG_2338.jpg?1705944316);
 	background-repeat: no-repeat;
 	background-size: cover;
 	box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
@@ -20,7 +21,7 @@ a {
 	justify-content: center;
 }
 .search-input {
-	background-color: #d7e0d2;
+	background-color: #c79f9f;
 	border: none;
 	border-radius: 5px;
 	width: 75%;
@@ -29,7 +30,7 @@ a {
 	margin-right: 5px;
 }
 .search-button {
-	background-color: #6b8839;
+	background-color: #8a6789;
 	border: none;
 	border-radius: 5px;
 	padding: 15px;
@@ -41,7 +42,7 @@ h1 {
 	margin-top: 50px;
 	font-size: 60px;
 	margin-bottom: 20px;
-	color: #324d04;
+	color: #ffffff;
 }
 
 .weather-app-current {
@@ -82,9 +83,9 @@ h1 {
 }
 
 footer {
-	border-top: 1px solid #f9f7fe;
+	border-top: 1px solid #8a6789;
 	padding: 5px 0 0 0;
 	text-align: center;
 	font-size: 14px;
-	color: rgba(0, 0, 0, 0.6);
+	color: rgba(0, 0, 0, 0.8);
 }
