--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@ body {
 	font-family: "Work Sans", sans-serif;
 }
 a {
-	color: white;
+	color: #6b8839;
 }
 .weather-app {
 	background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/111/368/original/annie-spratt-GJJo0gb7bfY-unsplash.jpg?1705760191);
@@ -21,7 +21,7 @@ a {
 	justify-content: center;
 }
 .search-input {
-	background-color: #c79f9f;
+	background-color: #d7e0d2;
 	border: none;
 	border-radius: 5px;
 	width: 75%;
@@ -30,7 +30,7 @@ a {
 	margin-right: 5px;
 }
 .search-button {
-	background-color: #8a6789;
+	background-color: #6b8839;
 	border: none;
 	border-radius: 5px;
 	padding: 15px;
@@ -42,7 +42,7 @@ h1 {
 	margin-top: 50px;
 	font-size: 60px;
 	margin-bottom: 20px;
-	color: #ffffff;
+	color: #324d04;
 }
 
 .weather-app-current {
